gapbs with ref inputs

--- a/deploy/workloads/Makefile
+++ b/deploy/workloads/Makefile
@@ -1,6 +1,7 @@
 
 # All the tests in here right now are based off the br-disk image.
-BASE_IMAGE:=../../sw/firesim-software/images/br-disk.img
+#BASE_IMAGE:=../../sw/firesim-software/images/br-disk.img
+BASE_IMAGE:=../../sw/firesim-software/images/40G2KBS.img
 BASE_LINUX:=../../sw/firesim-software/images/br-disk-bin
 
 # TODO: ideally we want to restructure this so that:
@@ -24,7 +25,7 @@ spec17_suites = intrate intspeed
 spec17_rootfs_dirs := $(patsubst %, spec17-%, $(spec17-suites))
 
 #Default to ref input size for SPEC17
-input=ref
+spec17-%: input = ref
 
 $(SPECKLE_DIR)/build/overlay/%/$(input):
 	cd $(SPECKLE_DIR) && ./gen_binaries.sh --compile --suite $* --input $(input)
@@ -35,12 +36,13 @@ spec17-%: spec17-%.json $(SPECKLE_DIR)/build/overlay/%/$(input)
 	python gen-benchmark-rootfs.py -w $< -r -b $(BASE_IMAGE) \
 		-s $(SPECKLE_DIR)/build/overlay/$*/$(input)
 
+#Default to test input size for GAPBS
+gapbs: input = test
 $(GAP_DIR)/overlay/$(input):
 	cd $(GAP_DIR) && ./gen_run_scripts.sh --binaries --input $(input) --json-ini
  
-
 gapbs:  gapbs.json $(GAP_DIR)/overlay/$(input) 
-	cp $(GAP_DIR)/overlay/$(input)/gapbs.{json,ini} .
+	#cp $(GAP_DIR)/$(input)-gapbs.{json,ini} .
 	mkdir -p $@
 	cp $(BASE_LINUX) $@/bbl-vmlinux
 	python gen-benchmark-rootfs.py -w $< -r -b $(BASE_IMAGE) \
