--- a/deploy/workloads/spec17-intspeed.ini
+++ b/deploy/workloads/spec17-intspeed.ini
@@ -3,7 +3,7 @@ runfarmtag=intspeed-runfarm
 
 f1_16xlarges=0
 m4_16xlarges=0
-f1_2xlarges=11
+f1_2xlarges=1
 
 runinstancemarket=ondemand
 spotinterruptionbehavior=terminate
@@ -11,7 +11,7 @@ spotmaxprice=ondemand
 
 [targetconfig]
 topology=no_net_config
-no_net_num_nodes=11
+no_net_num_nodes=1
 # These are unused
 linklatency=6405
 switchinglatency=10
@@ -19,7 +19,7 @@ netbandwidth=200
 profileinterval=-1
 
 # Need not be single core.
-defaulthwconfig= firesim-singlecore-no-nic-lbp
+defaulthwconfig=unleashed-singlecore-no-nic-ddr3-llc4mb-target1ghz
 
 [tracing]
 enable=no
